my first assigment to Yavkov lecture

--- a/site/style.css
+++ b/site/style.css
@@ -1,9 +1,62 @@
-.chicken{
-  background-color:blue;
+*{
+ box-sizing: border-box;
+padding:0;
+
+ 
 }
-.beef{
+h1{
+  text-align: center;
+}
+#span1{
+  display: block;
+  width: 25%;
   background-color: aquamarine;
+float: right;
 }
-.sushi{
-  background-color: blueviolet;
+#span2{
+  display: block;
+  width: 25%;
+  background-color: yellow;
+float: right;
+}
+#span3{
+  display: block;
+  width: 25%;
+  background-color: pink;
+float: right;
+}
+#span{
+  display: block;
+  clear: right;
+
+}
+p{
+  background-color: gray;
+  border: 3px solid black;
+  float: left;
+  width: 30%;
+  margin: 2px;
+}
+@media (min-width:768px)and (max-width:991px) {
+
+  #p1{
+    width:49%;
+  }
+  #p2{
+    width:49%; 
+  }
+  #p3{
+    width:100%;
+  }
+}
+@ media (max-width:767px){
+  #p1{
+width:100%;
+  }
+  #p2{
+width:100%;
+  }
+  #p3{
+width:100%;
+  }
 }
