--- a/site/style.css
+++ b/site/style.css
@@ -49,12 +49,12 @@ p{
     width:100%;
   }
 }
-@ media (max-width:767px){
+@media (max-width:767px){
   #p1{
 width:100%;
   }
   #p2{
-width:100%;
+wtermiteridth:100%;
   }
   #p3{
 width:100%;
